# agentic-code-rl

./: .gitignore  README.md  pyproject.toml
configs/: eval.yaml  grpo.yaml  ppo.yaml  sft.yaml
docs/: COLD_START_HANDOFF.md  POLICY_NETWORK_ARCHITECTURE.md  POLICY_NETWORK_IO_WALKTHROUGH.md  PROJECT_DESIGN.md  RL_ALGORITHMS_PPO_GRPO_DPO.md  SYSTEM_FLOW_WALKTHROUGH.md  TASK_001_FULL_WALKTHROUGH.md  TRAINING_POLICY_HANDOFF.md  TRAINING_QUICKSTART.md
scripts/: gpu_preflight.sh  train_policy.sh
src/agentic_code_rl/: __init__.py  agents.py  benchmark.py  cli.py  config.py  environment.py  evaluation.py  patch_candidates.py  policy.py  reporting.py  runner.py  schemas.py  tools.py  training.py
tests/: test_core.py
