[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-code-rl"
version = "0.1.0"
description = "Agentic RL playground for tool-using Python code repair agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = [
  "openai>=1.40",
]
train = [
  "numpy>=1.26",
  "torch>=2.2",
]
dev = [
  "pytest>=8",
]

[project.scripts]
agentic-code-rl = "agentic_code_rl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
